# db-image-links

./: .gitignore  .tool-versions  AGENTS.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-installers.yml  ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  constants.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: csv_export.rs  dropbox.rs  lib.rs  main.rs  natural_sort.rs  secrets.rs
apps/desktop/src/components/: ConnectionPill.tsx  DevLogPanel.tsx  GeneratePanel.tsx  Metric.tsx  NoticeBanner.tsx  ResultsTable.tsx  SetupPanel.tsx
apps/desktop/src/hooks/: useDevLog.ts
