[package]
name = "db-image-links"
version = "0.1.0"
description = "Generate SKU image link CSV files from Dropbox folders."
authors = ["DB Image Links"]
edition = "2021"
rust-version = "1.86"

[lib]
name = "db_image_links_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
